@@ -16,14 +16,14 @@ Check that you have the recent version of
 <a href="http://smarden.org/runit/">runit</a> installed.
 <p>
 Download
-<a href="socklog-2.0.2.tar.gz">socklog-2.0.2.tar.gz</a> into
+<a href="socklog-2.0.3.tar.gz">socklog-2.0.3.tar.gz</a> into
 <tt>/package</tt> and unpack the archive
 <pre>
  # cd /package
- # gunzip socklog-2.0.2.tar
- # tar -xpf socklog-2.0.2.tar
- # rm socklog-2.0.2.tar
- # cd admin/socklog-2.0.2
+ # gunzip socklog-2.0.3.tar
+ # tar -xpf socklog-2.0.3.tar
+ # rm socklog-2.0.3.tar
+ # cd admin/socklog-2.0.3
 </pre>
 On solaris read <a href="readme.solaris.html">using socklog on solaris</a>
 before proceeding.
@@ -39,7 +39,7 @@ hierarchy, do:
 </pre>
 To report success:
 <pre>
- # mail pape-socklog-2.0.2@smarden.org &lt;compile/sysdeps
+ # mail pape-socklog-2.0.3@smarden.org &lt;compile/sysdeps
 </pre>
 If you use <i>socklog</i> regularly, please
 <a href="http://smarden.org/pape/#contribution">contribute</a> to the project.
