@@ -84,8 +84,8 @@ If <i>prog</i> failed by maximal number of <i>tries</i>, <b>tryto</b> returns th
 code from <i>prog</i>. <p>
 
 <h2><a name='sect6'>See Also</a></h2>
-<i>socklog(8)</i>, <i>uncat(1)</i>, <i>svlogd(8)</i>, <i>multilog(8)</i>, <i>lseek(2)</i>,
-<i>timelimit(8)</i> <p>
+<i>socklog(8)</i>, <i>uncat(1)</i>, <i>svlogd(8)</i>, <i>multilog(8)</i>, <i>lseek(2)</i>
+<p>
  <i>http://smarden.org/socklog/</i><br>
   <i>http://smarden.org/runit/</i><br>
  
