@@ -9,7 +9,7 @@
 <hr>
 <h1>socklog - upgrading from previous versions</h1>
 <hr>
-<h3>1.5.0 to 2.0.0 or 2.0.1 or 2.0.2</h3>
+<h3>1.5.0 to 2.0.x</h3>
 The <a href="tryto.1.html">tryto</a> program supports a new option -P to run
 the program given at the command line in a new session, and signal the
 process group on timeouts.
