@@ -184,8 +184,7 @@ socklog(8),
 uncat(1),
 svlogd(8),
 multilog(8),
-lseek(2),
-timelimit(8)
+lseek(2)
 .LP
  http://smarden.org/socklog/
  http://smarden.org/runit/
