@@ -7,9 +7,9 @@ test -d src || sh -cx '! : Wrong working directory.'
 here=`env - PATH=$PATH pwd`
 parent=`dirname $here`
 
-echo 'Creating symlink socklog -> socklog-2.0.2...'
+echo 'Creating symlink socklog -> socklog-2.0.3...'
 rm -f socklog
-ln -s socklog-2.0.2 socklog
+ln -s socklog-2.0.3 socklog
 mv -f socklog ..
 
 echo 'Making command links in /command...'
